--- a/calc.html
+++ b/calc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="calculator.js"></script>
+    <script src="calculator.js" async></script>
 </head>
 <body>
     <div class="container">
@@ -25,12 +25,12 @@
                     <button class="numbers" id="zero">0</button>
                 </div>
                 <div class="right-buttons">
+                    <button class="clear">AC</button>
                     <button class="operators">*</button>
                     <button class="operators">/</button>
                     <button class="operators">+</button>
                     <button class="operators">-</button>
                     <button class="equals">=</button>
-                    <button class="clear">AC</button>
                 </div>
             </div>
         </div>
