--- a/calc.html
+++ b/calc.html
@@ -25,12 +25,12 @@
                     <button class="numbers" id="zero">0</button>
                 </div>
                 <div class="right-buttons">
-                    <button class="clear">AC</button>
+                    <button id="clear">AC</button>
                     <button class="operators">*</button>
                     <button class="operators">/</button>
                     <button class="operators">+</button>
                     <button class="operators">-</button>
-                    <button class="equals">=</button>
+                    <button id="equals">=</button>
                 </div>
             </div>
         </div>
